update for float