@@ -12,8 +12,8 @@ public class LineParserTest {
     @Test
     void testValid() {
         var lineParser = new LineParser();
-        Assertions.assertEquals(lineParser.parseLine("\"123\";\"\""), Arrays.asList(123L, null));
-        Assertions.assertEquals(lineParser.parseLine("\"1\";\"2\";\"3\";\"\""), Arrays.asList(1L, 2L, 3L, null));
+        Assertions.assertEquals(lineParser.parseLine("\"123\";\"\""), Arrays.asList(123f, null));
+        Assertions.assertEquals(lineParser.parseLine("\"1\";\"2\";\"3\";\"\""), Arrays.asList(1f, 2f, 3f, null));
         Assertions.assertEquals(lineParser.parseLine(""), Collections.emptyList());
     }
 
@@ -30,10 +30,10 @@ public class LineParserTest {
     @Test
     void testIsSensible() {
         var lineParser = new LineParser();
-        Assertions.assertTrue(lineParser.isSensibleString(List.of(1L)));
-        Assertions.assertFalse(lineParser.isSensibleString(List.of(1L)));
-        Assertions.assertFalse(lineParser.isSensibleString(List.of(1L)));
-        Assertions.assertTrue(lineParser.isSensibleString(List.of(1L, 2L)));
-        Assertions.assertTrue(lineParser.isSensibleString(Arrays.asList(1L, null, 2L)));
+        Assertions.assertTrue(lineParser.isSensibleString(List.of(1f)));
+        Assertions.assertFalse(lineParser.isSensibleString(List.of(1f)));
+        Assertions.assertFalse(lineParser.isSensibleString(List.of(1f)));
+        Assertions.assertTrue(lineParser.isSensibleString(List.of(1f, 2f)));
+        Assertions.assertTrue(lineParser.isSensibleString(Arrays.asList(1f, null, 2f)));
     }
 }
